Configures API base URL from environment variable
Ensures the script uses the correct API base URL, configurable via the `API_BASE_URL` environment variable.
Defaults to a local development URL if the environment variable is not set.
This allows the script to be run in different environments (production, staging, development) without modifying the code.
Also exports functions `fetchAllDates`, `refetchDate` to allow for external use.

--- a/.github/workflows/daily-fetch.yml
+++ b/.github/workflows/daily-fetch.yml
@@ -29,7 +29,10 @@ jobs:
         
     - name: Run fetch
       working-directory: ./scripts
-      run: npm start
+      run: |
+        echo "Using API_BASE_URL: ${{ secrets.API_BASE_URL || 'https://consent-dashboard.onrender.com' }}"
+        npm start
       env:
         NODE_ENV: production
-        # ใส่ environment variables ที่จำเป็นเพิ่มเติมที่นี่
+        # ใช้ API URL จาก secrets หรือใช้ค่า default
+        API_BASE_URL: ${{ secrets.API_BASE_URL || 'https://consent-dashboard.onrender.com' }}
