Enables fetching data for specified date ranges
Allows the data fetching script to accept start and end dates as command-line arguments.

This enables more flexible data retrieval, allowing users to fetch data for specific date ranges instead of just yesterday's data.

The daily fetch workflow is updated to use the new script with the default date range (yesterday).

--- a/.github/workflows/daily-fetch.yml
+++ b/.github/workflows/daily-fetch.yml
@@ -33,7 +33,7 @@ jobs:
       working-directory: ./scripts
       run: |
         echo "Using API_BASE_URL: https://consent-dashboard.onrender.com"
-        node fetch_yesterday.js
+        node fetch_all.js
       env:
         NODE_ENV: production
         API_BASE_URL: https://consent-dashboard.onrender.com
