Fix: แก้ไข workflow ให้คำนวณวันที่ตามเวลาไทย และเพิ่ม retry สำหรับ Auth0 export job
- เพิ่ม TZ=Asia/Bangkok ใน workflow เพื่อคำนวณวันเมื่อวานตามเวลาไทย
- เพิ่ม max_retries จาก 10 → 100 ครั้ง
- เพิ่ม retry_delay จาก 2 → 5 วินาที (รอได้สูงสุด 8.3 นาที)
- แก้ไข fetch_all.js ให้ startDate เป็นเมื่อวานอัตโนมัติ

--- a/.github/workflows/daily-fetch.yml
+++ b/.github/workflows/daily-fetch.yml
@@ -27,11 +27,15 @@ jobs:
       run: |
         npm ci --production=false
         
-    - name: Calculate yesterday's date
+    - name: Calculate yesterday's date (Thailand timezone)
       id: date
       run: |
+        # ตั้งค่า timezone เป็นเวลาไทย
+        export TZ='Asia/Bangkok'
+        # คำนวณวันเมื่อวานตามเวลาไทย
         YESTERDAY=$(date -d "yesterday" +%Y-%m-%d)
         echo "yesterday=$YESTERDAY" >> $GITHUB_OUTPUT
+        echo "Current time in Thailand: $(date)"
         echo "Will fetch data for: $YESTERDAY"
         
     - name: Run daily fetch (yesterday only)
